--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -1,3 +1,56 @@
 // Place all the styles related to the games controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.letter {
+  background-color: rgb(23, 100, 151);
+  color: white;
+  font-weight: bold;
+  padding: 10px;
+  margin: 10px;
+  box-shadow: 1px 1px 2px rgba(10, 10, 10, 0.3);
+}
+
+.form {
+  font-size: 0px;
+}
+
+.input {
+  font-size: 12px;
+}
+
+#btn-submit {
+  background-color:rgb(23, 100, 151);
+  color: white;
+  border: 1px solid rgb(23, 100, 151);
+  padding: 5px 15px;
+  border-radius: 4px;
+  font-size: 12px;
+  margin-top: 20px;
+  margin-left: 0px;
+}
+
+#btn-submit:hover {
+  background-color:rgb(153, 208, 245);
+  border: 1px solid rgb(153, 208, 245);
+}
+
+#word {
+  border: 1px solid lightgrey;
+  padding: 5px 15px;
+  border-radius: 4px;
+  font-size: 12px;
+  margin-top: 30px;
+  margin-right: 0px;
+  margin-left: 10px;
+}
+
+h1, p, a {
+  font-family: sans-serif;
+  margin-top: 30px;
+  margin-left: 10px;
+}
+
+a {
+  text-decoration: none;
+}
